# pk-backend-pacman

./: Makefile.am  README.md  alpmBackend.py  blacklist.json  groups.json  pacman.conf  pacman.py  pk-backend-pacman.c
